<?xml version="1.0"?>
<package format="2">
  <name>jackal_kinova_bringup</name>
  <version>0.5.3</version>
  <description>The jackal_kinova_bringup package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>kortex_driver</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
