<?xml version="1.0"?>
<package format="2">
  <name>jackal_kinova_description</name>
  <version>0.5.3</version>
  <description>Description files for mounting Kinova arms on Clearpath Jackal robots</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>kortex_description</exec_depend>
  <exec_depend>jackal_description</exec_depend>
</package>
