<?xml version="1.0"?>
<package>
  <name>jackal_manipulator_description</name>
  <version>0.5.3</version>
  <description>URDF robot description for Jackal</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>jackal_description</run_depend>
  <run_depend>kinova_description</run_depend>

  <export>
  </export>
</package>
