<?xml version="1.0"?>
<package>
  <name>jackal_manipulator_gazebo</name>
  <version>0.3.0</version>
  <description>Launchfiles to use Jackal in Gazebo.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jackal_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>jackal_manipulator_description</run_depend>
  <run_depend>jackal_gazebo</run_depend>
</package>
